<resources>
    <string name="app_name">Hazel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="username_is_missing">Username is missing</string>
    <string name="password_is_missing">Password is missing</string>
    <string name="please_wait">Please wait</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_failed">Connection failed</string>
    <string name="download_failed">Download failed</string>
    <string name="downloading_personnel">Downloading personnel</string>
    <string name="downloading_schedules">Downloading schedules</string>
    <string name="download_user_schedule_fail">Downloading user schedule failed</string>
    <string name="download_staff_schedule_fail">Downloading staff schedule failed</string>
    <string name="log_out">Log out</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="my_schedule">My schedule</string>
    <string name="work_schedule">Work schedule</string>
    <!--<string name="user_schedule">My schedule</string>-->
    <string name="workers">Workers</string>
    <string name="qualifications">Qualifications</string>
    <string name="tasks">Tasks</string>
    <string name="add_new">Add new</string>
    <string name="add_qualification">Add qualification</string>
    <string name="edit_qualification">Edit qualification</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="position">Position</string>-
    <string name="phone">Phone</string>
    <string name="mail">Email</string>
    <string name="person_number">Personal number</string>
    <string name="login_credentials">Create user account</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="add_worker">Add worker</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_worker">Edit worker</string>
    <string name="no_qualifications">No qualifications</string>
    <string name="workers_has_qualification">" workers has this qualification"</string>
    <string name="no_worker_has_qualification">no worker has this qualification</string>
    <string name="one_worker_has_qualification">1 worker has this qualification</string>
    <string name="worker_added_successfully">Worker added successfully</string>
    <string name="show_worker">Worker</string>
    <string name="edit_task">Edit task</string>
    <string name="add_task">Add task</string>
    <string name="required_qualifications">Required qualifications</string>
    <string name="task_name">Task name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="repeat">Repeat</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="required_workers">Required workers</string>
    <string name="ok">OK</string>
    <string name="select_workers">Select workers</string>
    <string name="select_qualifications">Select qualifications</string>
    <string name="every_day">Every day</string>
    <string name="every">"Every "</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="daily">Daily</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="repeat_this_task">Repeat this task</string>
    <string name="day">day</string>
    <string name="week">week,</string>
    <string name="month">" month"</string>
    <string name="on_the">" on the "</string>
    <string name="th">:th</string>
    <string name="only_once">Only once</string>
    <string name="monday">"Monday "</string>
    <string name="tuesday">"Tuesday "</string>
    <string name="wednesday">"Wednesday "</string>
    <string name="thursday">"Thursday "</string>
    <string name="friday">"Friday "</string>
    <string name="saturday">"Saturday "</string>
    <string name="sunday">"Sunday "</string>
    <string name="no_workers">No workers</string>
    <string name="one_worker">1 worker</string>
    <string name="space_workers">workers</string>
    <string name="repeat_once">repeat once</string>
    <string name="repeat_daily">repeat daily</string>
    <string name="repeat_weekly">repeat weekly</string>
    <string name="repeat_monthly">repeat monthly</string>
    <string name="error_during">"Error during: "</string>
    <string name="error_message">" message: "</string>
    <string name="description">Description</string>
    <string name="required_amount_of_workers">Required amount of workers</string>
    <string name="days">day</string>
    <string name="weeks">week</string>
    <string name="months">month</string>
    <string name="on_this_date">On this date</string>
    <string name="no_description">No description</string>
    <string name="downloading_qualifications">Downloading qualifications</string>
    <string name="downloading_tasks">Downloading tasks</string>
    <string name="none">None</string>
    <string name="qualification_added">Qualification added</string>
    <string name="working_hours_per_week">Working hours per week</string>
    <string name="access_level">Access level</string>
    <string name="name">Name</string>
    <string name="user_can_be_scheduled">User can be scheduled</string>
    <string name="administrator">Administrator</string>
    <string name="infinitely">Infinitely</string>
    <string name="repeat_untilDot">Until…</string>
    <string name="repeat_until">Until</string>
    <string name="task_starts">Task starts</string>
    <string name="task_ends">Task ends</string>
    <string name="worker_updated">Update successful</string>
    <string name="qualification_updated">Qualification updated</string>
    <string name="worker_deleted">Deleted</string>
    <string name="qualification_deleted">Qualification deleted</string>
    <string name="task_updated">Task updated</string>
    <string name="task_deleted">Task deleted</string>
    <string name="downloading_workplace_schedule">Downloading workplace schedule</string>
    <string name="downloading_my_schedule">Downloading my schedule</string>
    <string name="user_schedule">My schedule</string>
    <string name="want_to_work">Want to work</string>
    <string name="do_not_want_to_work">Do not want to work</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_starts">Schedule from</string>
    <string name="schedule_ends">Schedule to</string>
</resources>
