<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:fadeScrollbars="false"
    android:id="@+id/fragment_worker_add"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin"
        android:paddingStart="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:paddingEnd="@dimen/margin"
        tools:context="se.evinja.hazeldroid.workers.Fragment_Worker_Add">

        <View android:id="@+id/fake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>


        <ImageView
            android:id="@+id/worker_add_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/worker"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/worker_add_lbl_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/login_credentials"
            android:layout_below="@+id/worker_add_picture"
            />

        <EditText
            android:id="@+id/task_add_min_work"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="@style/edit_text"
            android:hint="@string/username"
            android:layout_below="@+id/worker_add_lbl_login"
            android:layout_alignRight="@id/fake"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/worker_add_password"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/password"
            android:layout_below="@+id/worker_add_lbl_login"
            style="@style/edit_text"
            android:layout_alignLeft="@id/fake"
            android:layout_alignParentRight="true" />




        <CheckBox
            android:id="@+id/worker_add_administrator"
            android:text="@string/administrator"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/worker_add_password" />

<RelativeLayout
    android:id="@+id/worker_add_worker_extra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/worker_add_administrator"
    >

    <View android:id="@+id/fake2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>


        <TextView
            android:id="@+id/worker_add_lbl_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/name"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             />

        <EditText
            android:id="@+id/worker_add_firstname"
            android:hint="@string/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text"
            style="@style/edit_text"
            android:layout_below="@+id/worker_add_lbl_firstname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/fake2"
 />


        <EditText
            android:id="@+id/worker_add_lastname"
            android:hint="@string/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text"
            style="@style/edit_text"
            android:layout_below="@+id/worker_add_lbl_firstname"
            android:layout_toRightOf="@+id/fake2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/worker_add_lbl_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/position"
            android:layout_below="@+id/worker_add_lastname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/worker_add_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text"
            style="@style/edit_text"
            android:layout_below="@+id/worker_add_lbl_position"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/worker_add_lbl_qualifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/qualifications"
            android:layout_below="@+id/worker_add_birthday"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/worker_add_qualifications"
            style="@style/SpinnerButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/worker_add_lbl_qualifications"
            />

        <TextView
            android:id="@+id/worker_add_lbl_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/phone"
            android:layout_below="@+id/worker_add_position" />

        <EditText
            android:id="@+id/worker_add_phone"
            android:inputType="phone"
            style="@style/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/worker_add_lbl_phone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/worker_add_lbl_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mail"
            android:layout_below="@+id/worker_add_phone" />

        <EditText
            android:id="@+id/worker_add_mail"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="@style/edit_text"
            android:layout_below="@+id/worker_add_lbl_mail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/worker_add_lbl_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/person_number"
            android:layout_below="@+id/worker_add_mail" />

        <EditText
            android:id="@+id/worker_add_birthday"
            style="@style/edit_text"
            android:hint="YYYY-MM-DD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/worker_add_lbl_birthday"
            android:layout_toLeftOf="@+id/worker_add_last4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/worker_add_last4"
            android:hint="XXXX"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/edit_text"
            android:layout_alignTop="@+id/worker_add_birthday"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/worker_edit_working_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/working_hours_per_week"
        android:layout_below="@id/worker_add_qualifications"
        />

    <TextView
        android:id="@+id/worker_add_lbl_min_workers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/minimum"
        android:layout_alignBaseline="@+id/worker_add_min_hours"
        android:layout_alignParentLeft="true"

        />

    <EditText
        android:id="@+id/worker_add_min_hours"
        android:inputType="number"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/worker_edit_working_hours"
        android:layout_alignRight="@id/fake2"
        android:layout_toLeftOf="@+id/worker_add_lbl_min_workers"
        android:layout_toRightOf="@+id/worker_add_lbl_min_workers"
        android:layout_toEndOf="@+id/worker_add_lbl_min_workers" />

    <TextView
        android:id="@+id/worker_add_lbl_max_workers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/maximum"
        android:layout_alignBaseline="@+id/worker_add_max_hours"
        android:layout_alignTop="@+id/worker_add_lbl_min_workers"
        android:layout_alignLeft="@+id/fake2"
        android:layout_alignStart="@+id/fake2" />

    <EditText
        android:id="@+id/worker_add_max_hours"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/worker_add_min_hours"
        android:layout_toRightOf="@+id/worker_add_lbl_max_workers"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>

    </RelativeLayout>
</ScrollView>